# django_docker_coq

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  readme.MD  requirements-dev.txt  requirements.txt  ruff.toml  testruff.py
app/: main.py
app_core/: manage.py
app_core/app_2/: models.py
app_core/app_2/management/commands/: create_custom_superuser.py
app_core/app_2/migrations/: 0001_initial.py
app_core/app_core/: urls.py
app_core/app_core/settings/: __init__.py  base.py  development.py  production.py
config/postgres/: Dockerfile
config/settings/: base.py  dev.py  prod.py
django_docker/django_docker/: settings.py
investment_manager/app_2/migrations/: 0001_initial.py
investment_manager/core/: asgi.py  wsgi.py
investment_manager/core/settings/: __init__.py  base.py  development.py  production.py
local/: development.env  production.env
scripts/: makemigrations-migrate.sh  manage.sh  prep_dev_env.sh
scripts/dev/: bootstrap-db.sh  create-superuser.sh  reset-db.sh  start-db.sh  stop-db.sh
