[tool.poetry]
name = "django-docker-coq"
version = "0.1.0"
description = "This package contains dependency used to run a django project on postgresql database"
authors = ["manulabricole"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.0"
django = "^5.0.6"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
